--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "react-scripts": "5.0.1",
     "sass": "^1.80.4",
     "sass-loader": "^16.0.2",
+    "serve": "^14.2.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
+    "start:dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
